--- a/pages/geometria-analitica/distanza-punto-p.html
+++ b/pages/geometria-analitica/distanza-punto-p.html
@@ -1,38 +1,11 @@
-<!DOCTYPE html>
-<html lang="it">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home | Geometricamente</title>
-    <meta name="theme-color" content="#6610f2">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../../assets/img/icons/apple-touch-icon.png?h=c9c080c99aa8bfa9524795554fcdd715">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="180x180" href="../../assets/img/icons/apple-touch-icon.png?h=c9c080c99aa8bfa9524795554fcdd715">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="manifest" href="../../manifest.json?h=f8b5b4be5935e7f4fdeaa516414ea860">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="../../assets/css/styles.css?h=942e24317a7d7706c7f253e1a6e8ecf0">
-</head>
-
-<body>
-    <div class="div-content-card">
-        <h3 class="text-center">Distanza di un punto P</h3>
-        <div class="div-content-card-scroll overflow-auto">
-            <p>Per trovare la distanza di un punto \(P\) da una retta, dovremmo avere come prima cosa un'equazione in forma implicita e successivamente utilizzare la seguente formula:<br>$$\color{red}d=\frac{\begin{vmatrix} ax_1+by_1+c \end{vmatrix}}{\sqrt{a^2+b^2}}$$<br></p>
-            <p class="subtitle">Esempio:</p>
-            <p></p>
-            <p>Determinare la distanza del punto \(P(3;-4)\) dalla retta di equazione \(-4x+3y+2=0\).<br>$$d=\frac{\begin{vmatrix} -4\cdot3+3\cdot(-4)+2 \end{vmatrix}}{\sqrt{(-4)^2+(3)^2}}=\frac{\begin{vmatrix} -12-12+2\end{vmatrix}}{\sqrt{16+9}}=$$ $$=<br>\frac{\begin{vmatrix} -22 \end{vmatrix}}{\sqrt{25}}=\frac{22}{5}$$<br>Dobbiamo considerare sempre il valore assoluto, ossia privato del segno (sempre positivo).<br>Se al denominatore troviamo una radice quadrata, è necessario razionalizzarla moltiplicandola con la stessa radice.</p>
-        </div>
+<div class="div-content-card">
+    <h3 class="text-center">Distanza di un punto P</h3>
+    <div class="div-content-card-scroll overflow-auto">
+        <p>Per trovare la distanza di un punto \(P\) da una retta, dovremmo avere come prima cosa un'equazione in forma implicita e successivamente utilizzare la seguente formula:<br>$$\color{red}d=\frac{\begin{vmatrix} ax_1+by_1+c \end{vmatrix}}{\sqrt{a^2+b^2}}$$<br></p>
+        <p class="subtitle">Esempio:</p>
+        <p></p>
+        <p>Determinare la distanza del punto \(P(3;-4)\) dalla retta di equazione \(-4x+3y+2=0\).<br>$$d=\frac{\begin{vmatrix} -4\cdot3+3\cdot(-4)+2 \end{vmatrix}}{\sqrt{(-4)^2+(3)^2}}=\frac{\begin{vmatrix} -12-12+2\end{vmatrix}}{\sqrt{16+9}}=$$ $$=<br>\frac{\begin{vmatrix} -22 \end{vmatrix}}{\sqrt{25}}=\frac{22}{5}$$<br>Dobbiamo considerare sempre il valore assoluto, ossia privato del segno (sempre positivo).<br>Se al denominatore troviamo una radice quadrata, è necessario razionalizzarla moltiplicandola con la stessa radice.</p>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../assets/js/mathjax.js?h=90e184e54b7999ce53794c665c17a2a6"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-</body>
-
-</html>
+</div>
+<script src="../../assets/js/mathjax.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
