--- a/pages/geometria-analitica/intersezione-due-rette.html
+++ b/pages/geometria-analitica/intersezione-due-rette.html
@@ -1,37 +1,10 @@
-<!DOCTYPE html>
-<html lang="it">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home | Geometricamente</title>
-    <meta name="theme-color" content="#6610f2">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../../assets/img/icons/apple-touch-icon.png?h=c9c080c99aa8bfa9524795554fcdd715">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="180x180" href="../../assets/img/icons/apple-touch-icon.png?h=c9c080c99aa8bfa9524795554fcdd715">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="manifest" href="../../manifest.json?h=f8b5b4be5935e7f4fdeaa516414ea860">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="../../assets/css/styles.css?h=942e24317a7d7706c7f253e1a6e8ecf0">
-</head>
-
-<body>
-    <div class="div-content-card">
-        <h3 class="text-center">Punto di intersezione tra due rette</h3>
-        <div class="div-content-card-scroll overflow-auto">
-            <p>Per trovare il punto di intersezione tra due rette, metteremo a sistema le due equazioni delle rette:<br>$$\color{red}P\begin{cases}EQ_1\\EQ_2\end{cases}$$</p>
-            <p class="subtitle">Esempio:</p>
-            <p>Determinare l'equazione passante per il punto di intersezione della retta \(2x+y=4\) e \(x+5y=1\) e avente lo stesso coefficiente angolare della retta \(2x-10y+3=0\).<br>Per risolvere questo problema, metteremo a sistema le due equazioni delle rette:<br>$$P\begin{cases}2x+y=4\\ x+5y=1\end{cases} $$<br>Risolviamo successivamente il sistema con il metodo di Kramer:<br>$$\Delta=\begin{vmatrix} 2 &amp; 1 \\ 1 &amp; 5 \\ \end{vmatrix}=10-1=9$$<br>$$\Delta_x=\begin{vmatrix} 4 &amp; 1 \\ 1 &amp; 5 \\ \end{vmatrix}=20-1=19$$<br>$$\Delta_y=\begin{vmatrix} 2 &amp; 4 \\ 1 &amp; 1 \\ \end{vmatrix}=2-4=-2$$<br>$$x=\frac{\Delta_x}{\Delta}=\frac{19}{9}$$<br>$$y=\frac{\Delta_y}{\Delta}=\frac{-2}{9}$$<br>Abbiamo così trovato le coordinate del punto \(P\).<br>$$P\left(\frac{19}{9};\frac{-2}{9}\right)$$<br>Troviamo adesso l'equazione della retta \(2x-10y+3=0\).<br>Per prima cosa calcoliamoci il coefficiente angolare:<br>$$m=-\frac{a}{b}=-\frac{-2}{-10}=\frac{1}{5}$$<br>Successivamente applichiamo la formula vista in precedenza:<br>$$y-y_1=m(x-x_1)$$<br>$$y-(-\frac{2}{9})=\frac{1}{5}(x-\frac{19}{9})$$<br>$$y+\frac{2}{9}=\frac{1}{5}x-\frac{19}{45}$$<br>$$y=\frac{1}{5}x+\left(\frac{-10-19}{45}\right)$$<br>$$y=\frac{1}{5}x-\frac{29}{45}$$</p>
-        </div>
+<div class="div-content-card">
+    <h3 class="text-center">Punto di intersezione tra due rette</h3>
+    <div class="div-content-card-scroll overflow-auto">
+        <p>Per trovare il punto di intersezione tra due rette, metteremo a sistema le due equazioni delle rette:<br>$$\color{red}P\begin{cases}EQ_1\\EQ_2\end{cases}$$</p>
+        <p class="subtitle">Esempio:</p>
+        <p>Determinare l'equazione passante per il punto di intersezione della retta \(2x+y=4\) e \(x+5y=1\) e avente lo stesso coefficiente angolare della retta \(2x-10y+3=0\).<br>Per risolvere questo problema, metteremo a sistema le due equazioni delle rette:<br>$$P\begin{cases}2x+y=4\\ x+5y=1\end{cases} $$<br>Risolviamo successivamente il sistema con il metodo di Kramer:<br>$$\Delta=\begin{vmatrix} 2 &amp; 1 \\ 1 &amp; 5 \\ \end{vmatrix}=10-1=9$$<br>$$\Delta_x=\begin{vmatrix} 4 &amp; 1 \\ 1 &amp; 5 \\ \end{vmatrix}=20-1=19$$<br>$$\Delta_y=\begin{vmatrix} 2 &amp; 4 \\ 1 &amp; 1 \\ \end{vmatrix}=2-4=-2$$<br>$$x=\frac{\Delta_x}{\Delta}=\frac{19}{9}$$<br>$$y=\frac{\Delta_y}{\Delta}=\frac{-2}{9}$$<br>Abbiamo così trovato le coordinate del punto \(P\).<br>$$P\left(\frac{19}{9};\frac{-2}{9}\right)$$<br>Troviamo adesso l'equazione della retta \(2x-10y+3=0\).<br>Per prima cosa calcoliamoci il coefficiente angolare:<br>$$m=-\frac{a}{b}=-\frac{-2}{-10}=\frac{1}{5}$$<br>Successivamente applichiamo la formula vista in precedenza:<br>$$y-y_1=m(x-x_1)$$<br>$$y-(-\frac{2}{9})=\frac{1}{5}(x-\frac{19}{9})$$<br>$$y+\frac{2}{9}=\frac{1}{5}x-\frac{19}{45}$$<br>$$y=\frac{1}{5}x+\left(\frac{-10-19}{45}\right)$$<br>$$y=\frac{1}{5}x-\frac{29}{45}$$</p>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../assets/js/mathjax.js?h=90e184e54b7999ce53794c665c17a2a6"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-</body>
-
-</html>
+</div>
+<script src="../../assets/js/mathjax.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
