--- a/pages/geometria-analitica/le-rette.html
+++ b/pages/geometria-analitica/le-rette.html
@@ -1,45 +1,46 @@
-<!DOCTYPE html>
-<html lang="it">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home | Geometricamente</title>
-    <meta name="theme-color" content="#6610f2">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../../assets/img/icons/apple-touch-icon.png?h=c9c080c99aa8bfa9524795554fcdd715">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="180x180" href="../../assets/img/icons/apple-touch-icon.png?h=c9c080c99aa8bfa9524795554fcdd715">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="manifest" href="../../manifest.json?h=f8b5b4be5935e7f4fdeaa516414ea860">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="../../assets/css/styles.css?h=942e24317a7d7706c7f253e1a6e8ecf0">
-</head>
-
-<body>
-    <div class="div-content-card">
-        <h3 class="text-center">Le rette parallele agli assi</h3>
-        <div class="div-content-card-scroll overflow-auto">
-            <p class="subtitle">Rette parallele</p>
-            <p>Le rette parallele, sono delle rette parallele agli assi \(X\) e \(Y\) e si indicano con&nbsp;\(X=k\)&nbsp; o&nbsp; \(Y=k\)<br></p><img class="img-fluid mx-auto d-block" src="../../assets/img/geometria-analitica/retta_parallela_y.svg?h=e7e2757575426721be390f7693af4427">
-            <p>Questa retta è parallela all'asse \(Y\) e quindi&nbsp; \(Y=3\)&nbsp;<br><br></p><img class="img-fluid mx-auto d-block" src="../../assets/img/geometria-analitica/retta_parallela_x.svg?h=4a1fbf240157bf09fbfecb3106a44074">
-            <p>Questa retta è parallela all'asse \(X\) e quindi&nbsp; \(X=4\)&nbsp;<br><br></p>
-            <p class="subtitle">Rette generiche</p>
-            <p>Le rette generiche, le possiamo trovare sia in forma <strong>esplicita</strong>, sia in forma <strong>implicita.</strong><br><br><strong>Rette esplicite:</strong><br>In forma esplicita la sua equazione sarà strutturata nel seguente modo:<br>$$\color{red}y=mx+q$$<br>Dove \(m\) è il <strong>coefficiente angolare</strong> e indica l'inclinazione della retta. Se \(m\) è positivo la retta non supererà i \(90°\), invece se è negativo supererà i \(90°\). <br>Invece \(q\) indica il termine noto ed equivale alla sua ordinata all'origine.<br></p>
-            <p class="subtitle">Esempio:</p>
-            <p>Data l'equazione di retta \(y=\frac{3}{2}x-5\) rappresentare graficamente i punti \(A\) e \(B\) e determinare il coefficiente angolare.<br>Per trovarci i punti \(A\) e \(B\), dovremmo assegnare a \(x\) un valore a piacere ed calcolare l'equazione.<br>$$y=\frac{3}{2}x-5$$<br>$$ \begin{array}{c|lcr} x &amp; \text{y}&nbsp; \\ \hline 2 &amp; \color{red}-2 \\ 4 &amp; \color{blue}1&nbsp; \end{array} $$<br>$$y=\frac{3}{2}(2)-5=3-5=\color{red}-2$$<br>$$y=\frac{3}{2}(4)-5=6-5=\color{blue}1$$<br>Abbiamo così ottenuto i punti \(A\) e \(B\):<br>\(A(2;-2)\) e&nbsp;\(B(4;1)\)<br>Essendo una retta esplicita, il coefficiente angolare è il valore prima della \(x\), ovvero \(\frac{3}{2}\) ed è positivo</p><img class="img-fluid mx-auto d-block" src="../../assets/img/geometria-analitica/retta_esplicita.svg?h=ed9f4a3740a56e22f0b957cfffea3bef">
-            <p><strong>Rette implicite:</strong><br>In forma implicita la sua equazione sarà strutturata nel seguente modo:<br>$$\color{red}ax+by+c=0$$<br>Per calcolare il coefficiente angolare si usa la seguente formula:<br>$$m=-\frac{a}{b} $$<br></p>
-            <p class="subtitle">Esempio:</p>
-            <p>Data l'equazione di retta \(4x+8y-2=0\) determinare il coefficiente angolare.&nbsp;<br>$$m=-\frac{4}{8}=-\frac{1}{2}$$<br>Se bisogna rappresentare graficamente la retta, è necessario trasformare l'equazione in forma esplicita portando la \(x\) e il termine noto al secondo membro cambiando di segno:<br>$$8y=-4x+2$$<br>Successivamente dividiamo tutto per il numero accanto alla \(y\) ovvero \(8\) e semplifichiamo.<br>$$\frac{8y}{8}=-\frac{4x}{8}+\frac{1}{8}$$<br>$$y=-\frac{1}{2}x+\frac{1}{8}$$<br>Poi assegniamo alla \(x\) un valore a piacere esattamente come visto in precedenza trovandoci le rispettive coordinate.</p>
-        </div>
+<div class="div-content-card">
+    <h3 class="text-center">Le rette parallele agli assi</h3>
+    <div class="div-content-card-scroll overflow-auto">
+        <p class="subtitle">Rette parallele</p>
+        <p>Le rette parallele, sono delle rette parallele agli assi \(X\) e \(Y\) e si indicano con&nbsp;\(X=k\)&nbsp;
+            o&nbsp; \(Y=k\)<br></p>
+        <custom-image file-name="retta_parallela_y.svg" alt="retta_parallela_y"
+            class="img-fluid mx-auto d-block"></custom-image>
+        <p>Questa retta è parallela all'asse \(Y\) e quindi&nbsp; \(Y=3\)&nbsp;<br><br></p>
+        <custom-image file-name="retta_parallela_x.svg" alt="retta_parallela_x"
+            class="img-fluid mx-auto d-block"></custom-image>
+        <p>Questa retta è parallela all'asse \(X\) e quindi&nbsp; \(X=4\)&nbsp;<br><br></p>
+        <p class="subtitle">Rette generiche</p>
+        <p>Le rette generiche, le possiamo trovare sia in forma <strong>esplicita</strong>, sia in forma
+            <strong>implicita.</strong><br><br><strong>Rette esplicite:</strong><br>In forma esplicita la sua equazione
+            sarà strutturata nel seguente modo:<br>$$\color{red}y=mx+q$$<br>Dove \(m\) è il <strong>coefficiente
+                angolare</strong> e indica l'inclinazione della retta. Se \(m\) è positivo la retta non supererà i
+            \(90°\), invece se è negativo supererà i \(90°\). <br>Invece \(q\) indica il termine noto ed equivale alla
+            sua ordinata all'origine.<br>
+        </p>
+        <p class="subtitle">Esempio:</p>
+        <p>Data l'equazione di retta \(y=\frac{3}{2}x-5\) rappresentare graficamente i punti \(A\) e \(B\) e determinare
+            il coefficiente angolare.<br>Per trovarci i punti \(A\) e \(B\), dovremmo assegnare a \(x\) un valore a
+            piacere ed calcolare l'equazione.<br>$$y=\frac{3}{2}x-5$$<br>$$ \begin{array}{c|lcr} x &amp; \text{y}&nbsp;
+            \\ \hline 2 &amp; \color{red}-2 \\ 4 &amp; \color{blue}1&nbsp; \end{array}
+            $$<br>$$y=\frac{3}{2}(2)-5=3-5=\color{red}-2$$<br>$$y=\frac{3}{2}(4)-5=6-5=\color{blue}1$$<br>Abbiamo così
+            ottenuto i punti \(A\) e \(B\):<br>\(A(2;-2)\) e&nbsp;\(B(4;1)\)<br>Essendo una retta esplicita, il
+            coefficiente angolare è il valore prima della \(x\), ovvero \(\frac{3}{2}\) ed è positivo</p>
+        <custom-image file-name="retta_esplicita.svg" alt="retta_esplicita"
+            class="img-fluid mx-auto d-block"></custom-image>
+        <p><strong>Rette implicite:</strong><br>In forma implicita la sua equazione sarà strutturata nel seguente
+            modo:<br>$$\color{red}ax+by+c=0$$<br>Per calcolare il coefficiente angolare si usa la seguente
+            formula:<br>$$m=-\frac{a}{b} $$<br></p>
+        <p class="subtitle">Esempio:</p>
+        <p>Data l'equazione di retta \(4x+8y-2=0\) determinare il coefficiente
+            angolare.&nbsp;<br>$$m=-\frac{4}{8}=-\frac{1}{2}$$<br>Se bisogna rappresentare graficamente la retta, è
+            necessario trasformare l'equazione in forma esplicita portando la \(x\) e il termine noto al secondo membro
+            cambiando di segno:<br>$$8y=-4x+2$$<br>Successivamente dividiamo tutto per il numero accanto alla \(y\)
+            ovvero \(8\) e
+            semplifichiamo.<br>$$\frac{8y}{8}=-\frac{4x}{8}+\frac{1}{8}$$<br>$$y=-\frac{1}{2}x+\frac{1}{8}$$<br>Poi
+            assegniamo alla \(x\) un valore a piacere esattamente come visto in precedenza trovandoci le rispettive
+            coordinate.</p>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../assets/js/mathjax.js?h=90e184e54b7999ce53794c665c17a2a6"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-</body>
-
-</html>
+</div>
+<script src="../../assets/js/mathjax.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
