--- a/pages/geometria-analitica/retta-passante-due-punti.html
+++ b/pages/geometria-analitica/retta-passante-due-punti.html
@@ -1,37 +1,16 @@
-<!DOCTYPE html>
-<html lang="it">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home | Geometricamente</title>
-    <meta name="theme-color" content="#6610f2">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../../assets/img/icons/apple-touch-icon.png?h=c9c080c99aa8bfa9524795554fcdd715">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="180x180" href="../../assets/img/icons/apple-touch-icon.png?h=c9c080c99aa8bfa9524795554fcdd715">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="../../assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="manifest" href="../../manifest.json?h=f8b5b4be5935e7f4fdeaa516414ea860">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="../../assets/css/styles.css?h=942e24317a7d7706c7f253e1a6e8ecf0">
-</head>
-
-<body>
-    <div class="div-content-card">
-        <h3 class="text-center">Retta passante per due punti</h3>
-        <div class="div-content-card-scroll overflow-auto">
-            <p>Per determinare l'equazione di una retta passante per due punti, si utilizza la seguente formula:<br>$$\color{red}\frac{y-y_1}{y_2-y_1}=\frac{x-x_1}{x_2-x_1}$$</p>
-            <p class="subtitle">Esempio:</p>
-            <p>Determinare l'equazione della retta passante per i punti \(A(4;-1)\) e \(B(-2;0)\)<br>$$\frac{y+1}{0+1}=\frac{x-4}{-2-4}$$<br>Moltiplichiamo adesso a croce.<br>$$\frac{y+1}{1}=\frac{x-4}{-6}$$<br>$$-6(y+1)=1(x-4)$$<br>$$-6y-6=x-4$$<br>$$-6y=x+6-4$$<br>$$-6y=x+2$$<br>Poiché la \(y\) è negativa, cambiamo tutto di segno ed eseguiamo le operazioni:<br>$$\frac{6y}{6}=\frac{-x-2}{6}$$<br>$$y=-\frac{1}{6}x-\frac{2}{6}$$<br>$$y=-\frac{1}{6}x-\frac{1}{3}$$<br>$$y=6x-\frac{1}{3}$$<br></p>
-        </div>
+<div class="div-content-card">
+    <h3 class="text-center">Retta passante per due punti</h3>
+    <div class="div-content-card-scroll overflow-auto">
+        <p>Per determinare l'equazione di una retta passante per due punti, si utilizza la seguente
+            formula:<br>$$\color{red}\frac{y-y_1}{y_2-y_1}=\frac{x-x_1}{x_2-x_1}$$</p>
+        <p class="subtitle">Esempio:</p>
+        <p>Determinare l'equazione della retta passante per i punti \(A(4;-1)\) e
+            \(B(-2;0)\)<br>$$\frac{y+1}{0+1}=\frac{x-4}{-2-4}$$<br>Moltiplichiamo adesso a
+            croce.<br>$$\frac{y+1}{1}=\frac{x-4}{-6}$$<br>$$-6(y+1)=1(x-4)$$<br>$$-6y-6=x-4$$<br>$$-6y=x+6-4$$<br>$$-6y=x+2$$<br>Poiché
+            la \(y\) è negativa, cambiamo tutto di segno ed eseguiamo le
+            operazioni:<br>$$\frac{6y}{6}=\frac{-x-2}{6}$$<br>$$y=-\frac{1}{6}x-\frac{2}{6}$$<br>$$y=-\frac{1}{6}x-\frac{1}{3}$$<br>$$y=6x-\frac{1}{3}$$<br>
+        </p>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../assets/js/mathjax.js?h=90e184e54b7999ce53794c665c17a2a6"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-</body>
-
-</html>
+</div>
+<script src="../../assets/js/mathjax.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
